--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.tpintegrador.ui.student.HomeFragment"
+        android:name="com.example.tpintegrador.ui.courses.CoursesFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_courses" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.tpintegrador.ui.asistencia.GalleryFragment"
+        android:name="com.example.tpintegrador.ui.attendance.AttendanceFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_attendance" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.tpintegrador.ui.calificacion.SlideshowFragment"
+        android:name="com.example.tpintegrador.ui.students.StudentFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_student" />
 </navigation>
