--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -55,93 +56,116 @@
         app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutCreateCourse"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/viewContainerCreateCourse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        app:cardCornerRadius="16dp"
         android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@+id/viewContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <EditText
-            android:id="@+id/edtNameCourse"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:hint="@string/edtNameCourse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/edtSchoolCourse"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/edtSchoolCourse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtNameCourse" />
-
-        <EditText
-            android:id="@+id/edtShiftCourse"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/edtShiftCourse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtSchoolCourse" />
-
-        <EditText
-            android:id="@+id/edtAddressCourse"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/edtAddressCourse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtShiftCourse" />
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingClass,MissingConstraints"
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
-            android:id="@+id/layoutButtons"
+            android:id="@+id/layoutContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtAddressCourse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <Button
-                android:id="@+id/btnCreateCourse"
-                android:layout_width="0dp"
+            <EditText
+                android:id="@+id/edtNameCourse"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btnCreateCourse"
-                android:layout_marginEnd="8dp" />
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:layout_marginTop="32dp"
+                android:hint="@string/edtNameCourse" />
 
-            <Button
-                android:id="@+id/btnCancelCreateCourse"
-                android:layout_width="0dp"
+            <EditText
+                android:id="@+id/edtSchoolCourse"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/btnCancel"
-                android:layout_marginStart="8dp" />
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:hint="@string/edtSchoolCourse" />
 
-            <Button
-                android:id="@+id/btnGeolocation"
-                android:layout_width="0dp"
+            <EditText
+                android:id="@+id/edtShiftCourse"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="My location"
-                android:layout_marginStart="8dp" />
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:hint="@string/edtShiftCourse" />
+
+            <EditText
+                android:id="@+id/edtAddressCourse"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:hint="@string/edtAddressCourse" />
+
+            <LinearLayout
+                android:id="@+id/layoutButtons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
+
+                <Button
+                    android:id="@+id/btnCreateCourse"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/btnCreateCourse"
+                    android:layout_marginEnd="3dp" />
+
+                <Button
+                    android:id="@+id/btnCancelCreateCourse"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/btnCancel"
+                    android:layout_marginEnd="3dp" />
+
+                <Button
+                    android:id="@+id/btnGeolocation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Location" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutMaps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
+
+                <FrameLayout
+                    android:id="@+id/mapContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:visibility="gone">
+
+                    <com.google.android.gms.maps.MapView
+                        android:id="@+id/mapView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </FrameLayout>
+
+            </LinearLayout>
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCourses"
