--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,13 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="BalloonStyleName2">
+        <item name="android:textSize">35sp</item>
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
     <style name="BalloonStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -42,5 +49,8 @@
         <item name="android:background">#FFFFFF</item>
         <item name="android:textColor">#000000</item>
         <item name="android:text">@string/textTest</item>
+    </style>
+    <style name="WhiteMenuItem" parent="Widget.AppCompat.Light.PopupMenu">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
